--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group = 'org.dimio'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.2-SNAPSHOT'
 
 java {
     sourceCompatibility = '21'
@@ -26,6 +26,7 @@ repositories {
 ext {
     set('snippetsDir', file("build/generated-snippets"))
     set('springCloudVersion', "2023.0.0")
+    set('rxJavaVersion', "3.1.8")
 }
 
 dependencies {
@@ -41,6 +42,7 @@ dependencies {
     implementation 'org.liquibase:liquibase-core'
     implementation 'org.springframework:spring-jdbc'
     implementation 'org.springframework.kafka:spring-kafka'
+    implementation "io.reactivex.rxjava3:rxjava:${rxJavaVersion}"
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
     runtimeOnly 'org.postgresql:postgresql'
